@@ -3,6 +3,11 @@
 	* src/wxterminal/wxt_gui.cpp (wxt_init):  Exit cleanly if initialization
 	fails.
 
+	* src/wxterminal/gp_cairo.c (gp_cairo_set_font):  Allow backslash ('\\')
+	to be treated as an escape character in font names.  This can be 
+	necessary if the font name contains a hyphen, which would otherwise be
+	converted to a space.
+
 2013-04-21  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/gplt_x11.c term/x11.trm:  X11 terminal support for toggling plots
